--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -25,6 +25,7 @@
                     <th>数量</th>
                     <th>日時</th>
                     <th>メモ</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody>
@@ -36,6 +37,12 @@
                     <td>{{ record.quantity }}</td>
                     <td>{{ record.received_date }}</td>
                     <td>{{ record.note }}</td>
+                    <td>
+                        <a class="edit-button" href="{{ url_for('edit_inventory', inventory_id=record.inventory_id) }}">編集</a>
+                        <form class="product-delete-form" action="{{ url_for('delete_inventory', inventory_id=record.inventory_id) }}" method="post" style="display:inline;">
+                            <button class="delete-button" type="submit">削除</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
