--- a/templates/products.html
+++ b/templates/products.html
@@ -9,6 +9,7 @@
         <th>Category</th>
         <th>Price</th>
         <th>Stock Quantity</th>
+        <th>Actions</th>
     </tr>
     {% for product in products %}
     <tr>
@@ -17,6 +18,12 @@
         <td>{{ product.category }}</td>
         <td>{{ product.price }}</td>
         <td>{{ product.stock_quantity }}</td>
+        <td>
+            <a class="edit-button" href="{{ url_for('edit_product', product_id=product.product_id) }}">Edit</a>
+            <form class="product-delete-form" action="{{ url_for('delete_product', product_id=product.product_id) }}" method="post" style="display:inline;">
+                <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this product?');">Delete</button>
+            </form>
+        </td>
     </tr>
     {% endfor %}
 </table>
