デプロイ準備

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -13,6 +13,7 @@
             <a href="{{ url_for('add_product') }}">商品追加</a>
             <a href="{{ url_for('products') }}">商品一覧</a>
             <a href="{{ url_for('add_inventory') }}">在庫の入出庫</a>
+            <a href="{{ url_for('logout') }}" style="float:right;">ログアウト</a> <!-- ログアウトボタンを追加 -->
         </nav>
     </header>
     <main>
